--- a/src/main/resources/templates/WebQuanLy/kich-co.html
+++ b/src/main/resources/templates/WebQuanLy/kich-co.html
@@ -14,11 +14,11 @@
     <script th:src="@{/js/sidebar.js}" defer></script>
     <style>
         :root {
-            --primary-color: #153054;
+            --primary-color: #99c3fa;
             --primary-hover: #102C47;
             --secondary-color: #9FD5F7;
             --secondary-hover: #84C7EA;
-            --accent-color: #479BD3;
+            --accent-color: #153054;
             --accent-hover: #CAEAFB;
             --border-active: #62B2E7;
             --main-background: #F4F9FC;
