--- a/src/main/resources/templates/WebQuanLy/add-chi-tiet-san-pham-form.html
+++ b/src/main/resources/templates/WebQuanLy/add-chi-tiet-san-pham-form.html
@@ -16,11 +16,11 @@
     <style>
         :root {
             /* Màu chính - giống như trang sản phẩm */
-            --primary-color: #153054;
+            --primary-color: #ffffff;
             --primary-hover: #102C47;
             --secondary-color: #9FD5F7;
             --secondary-hover: #84C7EA;
-            --accent-color: #479BD3;
+            --accent-color: #153054;
             --accent-hover: #CAEAFB;
             --border-active: #62B2E7;
 
