--- a/src/main/resources/templates/WebQuanLy/san-pham-list-form.html
+++ b/src/main/resources/templates/WebQuanLy/san-pham-list-form.html
@@ -15,11 +15,11 @@
     <style>
         :root {
             /* Màu chính */
-            --primary-color: #153054;
+            --primary-color: #f9fbfd;
             --primary-hover: #102C47;
             --secondary-color: #9FD5F7;
             --secondary-hover: #84C7EA;
-            --accent-color: #479BD3;
+            --accent-color: #153054;
             --accent-hover: #CAEAFB;
             --border-active: #62B2E7;
 
