--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -657,7 +657,7 @@
     </div>
     <div>
       <h3 class="text-lg font-bold mb-4">Liên hệ</h3>
-      <p class="text-sm">Địa chỉ: Chung Cư Le Capitole, Hà Nội, Việt Nam</p>
+      <p class="text-sm">Địa chỉ: 330 Phố Nam Dư, Trần Phú, Hai Bà Trưng, Hà Nội, Việt Nam</p>
       <p class="text-sm">Email: datn.acv@gmail.com</p>
       <p class="text-sm">Hotline: 0911 006 045</p>
       <div class="flex space-x-4 mt-4">
@@ -669,9 +669,9 @@
   </div>
   <div class="container mx-auto mt-8">
     <div class="map-container relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hover:shadow-lg">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.646955515961!2d105.81876547508028!3d21.00678448063709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad4154d7e2e9%3A0x4ac6110617de42bc!2sChung%20C%C6%B0%20Le%20Capitole!5e0!3m2!1sen!2s!4v1754127537191!5m2!1sen!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.7142835949912!2d105.85287637508011!3d21.004087180639065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad002fc50fd1%3A0x9a7962d208d20498!2sACV%20Store!5e0!3m2!1sen!2s!4v1755701406991!5m2!1sen!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <p class="text-center text-sm mt-2 text-gray-300">* Bản đồ hiển thị vị trí chi nhánh chính tại Chung Cư Le Capitole, Hà Nội. Vui lòng liên hệ để xác nhận giờ mở cửa.</p>
+    <p class="text-center text-sm mt-2 text-gray-300">* Bản đồ hiển thị vị trí chi nhánh chính tại ACV Store tại 330 Phố Nam Dư, Trần Phú, Hai Bà Trưng, Hà Nội. Vui lòng liên hệ để xác nhận giờ mở cửa.</p>
   </div>
   <div class="text-center mt-8 text-sm">© 2025 ACV Store. All rights reserved.</div>
   <!-- Hiệu ứng nền -->
