--- a/src/main/resources/templates/WebKhachHang/chi-tiet-don-mua.html
+++ b/src/main/resources/templates/WebKhachHang/chi-tiet-don-mua.html
@@ -650,6 +650,7 @@
       background: linear-gradient(135deg, #059669 0%, #10b981 100%);
       color: white;
       padding: 14px 32px;
+      margin-right: 15px;
       border-radius: 12px;
       border: none;
       cursor: pointer;
