--- a/src/main/resources/templates/WebKhachHang/tra-doi-san-pham.html
+++ b/src/main/resources/templates/WebKhachHang/tra-doi-san-pham.html
@@ -358,6 +358,7 @@
             color: white;
             border: none;
             padding: 16px 32px;
+            margin-bottom: 40px;
             border-radius: 12px;
             font-weight: 600;
             font-size: 1rem;
@@ -381,6 +382,7 @@
             border: 2px solid var(--gray-300);
             padding: 16px 32px;
             border-radius: 12px;
+            margin-bottom: 40px;
             font-weight: 600;
             font-size: 1rem;
             text-decoration: none;
