--- a/src/main/resources/templates/WebQuanLy/exchange-requests.html
+++ b/src/main/resources/templates/WebQuanLy/exchange-requests.html
@@ -160,12 +160,12 @@
                                 onclick="approveRequest(this)">
                             <i class="fas fa-check"></i>
                         </button>
-                        <button th:if="${request.trangThai == 'Chờ xử lý'}"
-                                class="btn-reject"
-                                th:attr="data-id=${request.id}"
-                                onclick="rejectRequest(this)">
-                            <i class="fas fa-times"></i>
-                        </button>
+<!--                        <button th:if="${request.trangThai == 'Chờ xử lý'}"-->
+<!--                                class="btn-reject"-->
+<!--                                th:attr="data-id=${request.id}"-->
+<!--                                onclick="rejectRequest(this)">-->
+<!--                            <i class="fas fa-times"></i>-->
+<!--                        </button>-->
                     </td>
                 </tr>
                 </tbody>
